--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\Support\\": "tests/_support"
+            "Tests\\Support\\": "tests/_support",
+            "Traits\\": "app/Traits"
         }
     },
     "scripts": {
