--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^7.3 || ^8.0",
         "codeigniter4/framework": "^4",
         "codeigniter4/translations": "^4.1",
-        "psr/container": "^1.0"
+        "psr/container": "^1.0",
+        "web-token/jwt-framework": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
