--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "codeigniter4/framework": "^4",
         "codeigniter4/translations": "^4.1",
         "psr/container": "^1.0",
-        "web-token/jwt-framework": "^2.2"
+        "web-token/jwt-framework": "^2.2",
+        "ramsey/uuid": "^4.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
