--- a/public/.htaccess
+++ b/public/.htaccess
@@ -36,6 +36,14 @@ Options All -Indexes
 	# Ensure Authorization header is passed along
 	RewriteCond %{HTTP:Authorization} .
 	RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
+	# Redirect for CORS Preflight request
+	RewriteCond %{REQUEST_METHOD} OPTIONS
+	RewriteRule ^(.*)$ $1 [R=200,L]
+	# Set headers to access CORS Requests / allowing localhost only
+	Header always add Access-Control-Allow-Origin "http://localhost:8888"
+	Header always add Access-Control-Allow-Headers "Authorization"
+	Header always add Access-Control-Allow-Methods "POST, OPTIONS"
 </IfModule>
 
 <IfModule !mod_rewrite.c>
