--- a/public/.htaccess
+++ b/public/.htaccess
@@ -40,9 +40,10 @@ Options All -Indexes
 	# Redirect for CORS Preflight request
 	RewriteCond %{REQUEST_METHOD} OPTIONS
 	RewriteRule ^(.*)$ $1 [R=200,L]
+
 	# Set headers to access CORS Requests / allowing localhost only
 	Header always add Access-Control-Allow-Origin "http://localhost:8888"
-	Header always add Access-Control-Allow-Headers "Authorization"
+	Header always add Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With"
 	Header always add Access-Control-Allow-Methods "POST, OPTIONS"
 </IfModule>
 
